--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://kanitsharma.github.io/Lambda-Code",
   "dependencies": {
     "brace": "^0.10.0",
+    "firebase": "^3.9.0",
     "react": "^15.5.4",
     "react-ace": "^4.2.1",
     "react-dom": "^15.5.4"
