--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "brace": "^0.10.0",
     "firebase": "^3.9.0",
+    "js-beautify": "^1.6.12",
     "react": "^15.5.4",
     "react-ace": "^4.2.1",
     "react-dom": "^15.5.4"
